--- a/punto11/index.html
+++ b/punto11/index.html
@@ -18,9 +18,9 @@
         <div class="iconos">
 
             <ul class="listas">
-                <li>home</li>
-                <li>explorar</li>
-                <li>configuracion</li>
+                <li>Home</li>
+                <li>Explorar</li>
+                <li>Configuracion</li>
 
             </ul>
 
@@ -30,99 +30,125 @@
 
         <div class="medio">
 
-            <div class="container-1">
-                <div class="">
-                    <span class=""><i class=""></i></span>
-                    <input type="search" placeholder="buscador de twitter" />
+            <div class="nav">
+
+
+
+
+                <div class="container-1">
+                    <div class="">
+                        <span class=""><i class=""></i></span>
+                        <input type="search" placeholder="buscador de twitter" />
+                    </div>
+                </div>
+
+
+
+                <nav class="navegador">
+                    <ul class="lista-2">
+                        <li>para ti</li>
+                        <li>tendencias</li>
+                        <li>world cup</li>
+                        <li>noticias </li>
+                        <li>deportes</li>
+                        <li>entrenamiento</li>
+
+                    </ul>
+
+                </nav>
+            </div>
+
+            <div class="cuerpo">
+                <div class="contenedor">
+
+                    <h5>Copa mundial FIFA</h5>
+                    <p>en directo</p>
+                </div>
+
+                <div class="listado">
+
+                    <div class="japon">
+
+                        <img src="../iconos/descarga.png" alt="">
+                        <p> Japon</p>
+                    </div>
+                    <div class="croacia">
+
+                        <img src="../iconos/descarga2.png" alt="">
+
+                        <p>croacia</p>
+                    </div>
+
+
+
+                    <div class="tendencias">
+                        <p>tendencias en Colombia</p>
+                        <p><b>Cristiano ronaldo</b> </p>
+                        <p>94 mil tweets</p>
+                    </div>
+
+                    <div class="tendencias">
+                        <p>tendencias en Colombia</p>
+                        <p><b>Paro nacional</b> </p>
+                        <p>tendencias sobre <span style="color:blue ;">pardo</span> </p>
+                    </div>
+
+                    <div class="tendencias">
+                        <p>tendencias en Colombia</p>
+                        <p><b>Pele</b> </p>
+                        <p>163 mil tweets</p>
+                    </div>
+
+                    <div class="tendencias">
+                        <p>tendencias en Colombia</p>
+                        <p><b>Bellingham</b> </p>
+                        <p>211 mil tweets</p>
+                    </div>
+
+
+
                 </div>
             </div>
 
 
-
-            <nav class="navegador">
-                <ul class="lista-2">
-                    <li>para ti</li>
-                    <li>tendencias</li>
-                    <li>world cup</li>
-                    <li>noticias </li>
-                    <li>deportes</li>
-                    <li>entrenamiento</li>
-
-                </ul>
-
-            </nav>
-
-            <div class="contenedor">
-
-                <h5>Copa mundial FIFA</h5>
-                <p>en directo</p>
-            </div>
-
-            <div class="listado">
-
-                <p class="japon"> Japon</p>
-                <p class="croacia">croacia</p>
-
-                <div class="tendencias">
-                    <p>tendencias en Colombia</p>
-                    <p><b>Cristiano ronaldo</b> </p>
-                    <p>94 mil tweets</p>
-                </div>
-
-                <div class="tendencias">
-                    <p>tendencias en Colombia</p>
-                    <p><b>Paro nacional</b> </p>
-                    <p>tendencias sobre <span style="color:blue ;">pardo</span> </p>
-                </div>
-
-                <div class="tendencias">
-                    <p>tendencias en Colombia</p>
-                    <p><b>Pele</b> </p>
-                    <p>163 mil tweets</p>
-                </div>
-
-                <div class="tendencias">
-                    <p>tendencias en Colombia</p>
-                    <p><b>Bellingham</b> </p>
-                    <p>211 mil tweets</p>
-                </div>
-
-
-
-            </div>
 
         </div>
 
 
         <div class="right">
-            <h4>¿Eres nuevo en twitter?</h4>
-            <p>registrate ahor apara tener tu propia cronologia personalizada</p>
 
-            <div class="barra">
-                <div class="container-2">
-                    <div class="">
-                        <span class=""><i class=""></i></span>
-                        <input type="search" placeholder="Registrarse con google" />
+            <div class="derecha">
+                <h4>¿Eres nuevo en twitter?</h4>
+                <p>registrate ahor apara tener tu propia cronologia personalizada</p>
+
+                <div class="barra">
+                    <div class="container-2">
+                        <div class="">
+                            <span class=""><i class=""></i></span>
+                            <input type="search" placeholder="Registrarse con google" />
+                        </div>
+                    </div>
+                    <div class="container-3">
+                        <div class="">
+                            <span class=""><i class=""></i></span>
+                            <input type="search" placeholder="Registrarse con Aple" />
+                        </div>
+                    </div>
+                    <div class="container-4">
+                        <div class="">
+                            <span class=""><i class=""></i></span>
+                            <input type="search" placeholder="Registra tu numero de telefon..." />
+                        </div>
                     </div>
                 </div>
-                <div class="container-3">
-                    <div class="">
-                        <span class=""><i class=""></i></span>
-                        <input type="search" placeholder="Registrarse con Aple" />
-                    </div>
-                </div>
-                <div class="container-4">
-                    <div class="">
-                        <span class=""><i class=""></i></span>
-                        <input type="search" placeholder="Registra tu numero de telefon..." />
-                    </div>
-                </div>
+
+
+                <p class="text">Al registrase,aceptas los <span style="color: blue;">terminos y condiciones de la
+                        politicas
+                        de privacvidad </span> ,incluidad el <span style="color:blue;">uso
+                        de las cookings</span> </p>
             </div>
 
-
-            <p class="text">Al registrase,aceptas los <span style="color: blue;">terminos y condiciones de la politicas
-                    de privacvidad </span> ,incluidad el <span style="color:blue;">uso
-                    de las cookings</span> </p>
 
 
 
@@ -133,13 +159,29 @@
 
     </div>
 
-    <div class="pie">
-
-        <footer>
 
 
-        </footer>
-    </div>
+    <footer>
+
+
+
+
+        <div class="pagina">
+
+            <h3>No te pierdas lo que esta pasando </h3>
+
+            <p>los usuarios de twitter son los primeros en enterarse</p>
+        </div>
+
+
+        <div class="botones"> <button class="a">iniciar seccion</button>
+            <button class="b">registrate</button>
+        </div>
+
+
+
+    </footer>
+
 
 
 
